[package]
name = "wikireader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
random_word = { version = "0.4.2", features = ["en"] }
soup = "0.5.1"
colored = "2.1.0"
